<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_gray_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/common_gray_bg"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kline_tv_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="0.00"
                    android:textColor="@color/text_color_red"
                    android:textSize="@dimen/text_size_22sp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_max" />

                <TextView
                    android:id="@+id/kline_tv_max"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_open" />

                <TextView
                    android:id="@+id/kline_tv_open"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_num" />

                <TextView
                    android:id="@+id/kline_tv_num"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp">

                    <TextView
                        android:id="@+id/kline_tv_sub"
                        style="@style/MainCommonText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0.00"
                        android:textColor="@color/text_color_red"
                        android:textSize="@dimen/text_size_16sp" />

                    <TextView
                        android:id="@+id/kline_tv_percent"
                        style="@style/MainCommonText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0.00"
                        android:textColor="@color/text_color_red"
                        android:textSize="@dimen/text_size_16sp" />
                </LinearLayout>


                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_min" />

                <TextView
                    android:id="@+id/kline_tv_min"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_exchange" />

                <TextView
                    android:id="@+id/kline_tv_exchange"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

                <TextView
                    style="@style/MainCommonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/k_amount" />

                <TextView
                    android:id="@+id/kline_tv_amount"
                    style="@style/MainCommonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/view_kline_chart_top_ma" />

        <com.sanqius.loro.cjlc.mychart.MyCombinedChart
            android:id="@+id/kline_chart_k"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></com.sanqius.loro.cjlc.mychart.MyCombinedChart>

        <com.sanqius.loro.cjlc.mychart.MyCombinedChart
            android:id="@+id/kline_chart_volume"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></com.sanqius.loro.cjlc.mychart.MyCombinedChart>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.sanqius.loro.cjlc.mychart.MyCombinedChart
                android:id="@+id/kline_chart_charts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></com.sanqius.loro.cjlc.mychart.MyCombinedChart>

            <ImageView
                android:id="@+id/kline_iv_refresh"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/refresh" />

            <TextView
                android:id="@+id/kline_tv_entity"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_14sp"
                android:text="@string/entity_macd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_common"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>